--- a/ApiMultiTenant/appsettings.Development.json
+++ b/ApiMultiTenant/appsettings.Development.json
@@ -12,7 +12,7 @@
         "typeBD": "SqlServer"
     },
     "clientD": {
-        "connectionString": "Server=localhost;Port=5432;Database=Multitenant_ClientD;User Id=postgres;Password=myPassword;",
+        "connectionString": "Server=localhost;Port=5432;Database=Multitenant_ClientD;User Id=myUserName;Password=myPassword;",
         "typeBD": "PostgreSQL"
     },
 
